# gputop

./: meson.build
subprojects/protobuf-c/: Makefile.in  aclocal.m4  configure  meson.build
subprojects/protobuf-c/protoc-c/: main.cc
subprojects/wslay-d72ea2ea9e24032144ab85f840e3aaf8cd5d6e07/: meson.build
subprojects/wslay-d72ea2ea9e24032144ab85f840e3aaf8cd5d6e07/lib/includes/wslay/: gen_wslayver.py  meson.build
